# TRL

./: CMakeLists.txt  cat.c  display.c  display.h  font.c  font.h  font_arial_bold.h  font_arial_round_16x24.h  font_dotmatrix_m.h  font_grotesk16x32.h  font_grotesk_bold16x32.h  font_retro16x32.h  font_sinclair_s.h  font_swiss721_outline.h  i2c.h  lcd.c  lcd_i2c.c  nvram.c  nvram.h  rotary.c  rotary.h  si5351a.c
